# linal-2021

./: CMakeLists.txt
assessment/: CMakeLists.txt  assessment.hpp
assessment/src/: bullet.cpp  bullet.hpp  camera.cpp  camera.hpp  main.cpp  resources.cpp  resources.hpp  spaceship.cpp  spaceship.hpp  target.cpp  target.hpp  view.cpp  view.hpp
assignments/final/: CMakeLists.txt  final.hpp
assignments/final/src/: camera.cpp  main.cpp  model.hpp
assignments/week1/: CMakeLists.txt  week1.hpp
assignments/week1/src/: main.cpp
assignments/week2/: CMakeLists.txt  week2.hpp
assignments/week2/src/: main.cpp
assignments/week3/: CMakeLists.txt  week3.hpp
assignments/week3/src/: camera.cpp  camera.hpp  main.cpp  model.hpp
mathlib/: CMakeLists.txt  mathlib.h  mathlib.hpp
mathlib/include/mathlib/: matrix.hpp  vector.hpp
mathlib/include/mathlib/utils/: helpers.hpp  operations.hpp  transforms.hpp
mathlib/test/: 000_catch_main.cpp  001_vector.cpp  002_matrix.cpp  003_basis.cpp  004_operations.cpp  005_transforms.cpp
videolib/: CMakeLists.txt  videolib.hpp
videolib/include/videolib/: instance.hpp  key.hpp  model.hpp  renderer.hpp  window.hpp
videolib/include/videolib/shapes/: line.hpp  rectangle.hpp  triangle.hpp
videolib/src/videolib/: instance.cpp  model.cpp  renderer.cpp
videolib/src/videolib/utils/: coordinate_helper.cpp  coordinate_helper.hpp
videolib/test/: 001_coordinate_helper.cpp
week1/: CMakeLists.txt
week1/src/: main.cpp
